# parm

./: .gitignore  pyproject.toml
permission/vcenter01/: datacenter1.yml
src/parm/: adder.py  cli.py  connector.py  export.py  exporter.py  loader.py  parser.py  replacer.py  service_instance.py
